src/game/PokemonItem.css
.item {
  display: flex;
  align-items: center;
  background: rgb(246, 194, 97);
  border-radius: 99px;
  height: 48px;
  max-height: 100%;
  touch-action: none;
  margin-left: 20px;
  box-shadow: -3px -5px #00000030 inset;
  user-select: none;
  cursor: grab;
  text-align: left;
  gap: 50px;
}

.correct {
	background: var(--green) !important;
	font-weight: bold;
	color: white;
}

.incorrect {
	background: var(--red) !important;
	font-weight: bold;
	color: white;
}

.sprite {
  border-radius: 99px;
  height: 48px;
  width: 48px;
  box-sizing: border-box;
  background: white;
  border: 2px solid #00000030;
  background-clip: content-box;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}

.sprite img {
	height: 96px;
	width: 96px;
	display: block;
  filter: drop-shadow(3px 3px 1px #ab7a1e4f);
}

.label {
  text-transform: capitalize;
  margin-right: 10px;
  font-size: 0.7em;
  font-weight: normal;
  background: var(--black);
  color: white;
  border-radius: 6px;
  padding: 0 3px;
  opacity: 0.8;
}

